# pymbolic

./: .gitignore  .gitlab-ci.yml  .pylintrc-local.yml  .test-py2.yml  .test-py3.yml  CITATION.cff  LICENSE  LITERATURE  MANIFEST.in  README.rst  TODO  azure-pipelines.yml  pyproject.toml  requirements.txt  run-mypy.sh  setup.cfg  setup.py
.basedpyright/: baseline.json
.github/workflows/: ci.yml
doc/: Makefile  algorithms.rst  conf.py  geometric-algebra.rst  index.rst  mappers.rst  misc.rst  primitives.rst  upload-docs.sh  utilities.rst
experiments/: traversal-benchmark.py
pymbolic/: __init__.py  algorithm.py  compiler.py  cse.py  functions.py  geometric_algebra.py  maxima.py  parser.py  polynomial.py  primitives.py  rational.py  sympy_conv.py  sympy_interface.py  traits.py  typing.py  version.py
pymbolic/geometric_algebra/: __init__.py  mapper.py  primitives.py
pymbolic/imperative/: __init__.py  analysis.py  instruction.py  instructions.py  statement.py  transform.py  utils.py
pymbolic/interop/: ast.py  common.py  maxima.py  symengine.py  sympy.py
pymbolic/interop/matchpy/: __init__.py  mapper.py  tofrom.py
pymbolic/mapper/: __init__.py  analysis.py  c_code.py  coefficient.py  collector.py  constant_converter.py  constant_folder.py  cse_tagger.py  dependency.py  differentiator.py  distributor.py  equality.py  equalizer.py  evaluator.py  expander.py  flattener.py  flop_counter.py  graphviz.py  optimize.py  persistent_hash.py  stringifier.py  subst_applier.py  substitutor.py  unifier.py
src/: __init__.py  algorithm.py  compiler.py  constant_detector.py  conversion.py  differentiator.py  expression_operators.py  functions.py  integer.py  lex.py  mapper.py  operation.py  parser.py  polynomial.py  primitives.py  rational.py  stringifier.py  substitutor.py  tests.py  traits.py  vector.py
src/mapper/: __init__.py  c_code.py  coefficient_finder.py  collector.py  constant_detector.py  constant_folder.py  dependency.py  differentiator.py  evaluator.py  expander.py  flattener.py  flop_counter.py  hash_generator.py  mapper.py  stringifier.py  substitutor.py
test/: conftest.py  simple.py  test_matchpy.py  test_maxima.py  test_pattern_match.py  test_persistent_hash.py  test_pymbolic.py  test_sympy.py  testlib.py
