[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymbolic"
version = "2024.2.1"
description = "A package for symbolic computation"
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "immutabledict",
    "pytools>=2024.1.16",
    # for dataclass_transform, TypeAlias, deprecated
    "typing-extensions>=4.5",
]

[project.optional-dependencies]
matchpy = [
    "matchpy",
]
numpy = [
    "numpy>=1.6",
]
test = [
    "mypy",
    "pytest",
    "ruff",
    # only needed for type checking
    "useful-types",
]

[project.urls]
Documentation = "https://documen.tician.de/pymbolic"
Homepage = "https://github.com/inducer/pymbolic"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "G",    # flake8-logging-format
    "I",    # flake8-isort
    "N",    # pep8-naming
    "Q",    # flake8-quotes
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
]
extend-ignore = [
    "C409", # remove comprehension within tuple call
    "C90",  # McCabe complexity
    "E226", # missing whitespace around arithmetic operator
    "E241", # multiple spaces after comma
    "E242", # tab after comma
    "E402", # module level import not at the top of file
    "UP031", # use f-strings instead of %
    "UP032", # use f-strings instead of .format
]

[tool.ruff.lint.per-file-ignores]
"experiments/traversal-benchmark.py" = ["E501"]
"doc/conf.py" = ["I002"]
"experiments/*.py" = ["I002"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.ruff.lint.isort]
known-first-party = ["pytools"]
known-local-folder = ["pymbolic"]
lines-after-imports = 2
combine-as-imports = true
required-imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "sympy.*",
    "symengine.*",
    "matchpy.*",
    "multiset.*",
    "pexpect.*",
]
ignore_missing_imports = true
